tests/chainsaw/block-expired-exceptions/good-polex-future.yaml
apiVersion: kyverno.io/v2beta1
kind: PolicyException
metadata:
  name: good-polex-future
  annotations:
    policy.giantswarm.io/exception-expires-at: "2099-12-31T23:59:59Z"
spec:
  exceptions:
  - policyName: disallow-ephemeral-containers
    ruleNames:
    - disallow-ephemeral-containers
  match:
    any:
    - resources:
        kinds:
        - Pod
