tests/chainsaw/block-expired-exceptions/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: block-expired-exceptions
spec:
  steps:
  - name: create a PolicyException with an expired timestamp
    try:
    - create:
        expect:
        - check:
            ($error != null): true
        file: bad-polex-expired.yaml
  - name: create a PolicyException with an invalid timestamp format
    try:
    - create:
        expect:
        - check:
            ($error != null): true
        file: bad-polex-invalid-timestamp.yaml
  - name: create a PolicyException with a future timestamp
    try:
    - create:
        expect:
        - check:
            ($error != null): false
        file: good-polex-future.yaml
  - name: create a PolicyException without an expiry annotation
    try:
    - create:
        expect:
        - check:
            ($error != null): false
        file: good-polex-no-annotation.yaml
